--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website-app",
   "version": "0.1.0",
   "private": true,
-   "dependencies": {
+  "dependencies": {
     "-": "0.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -20,8 +20,9 @@
     "react-localization": "^1.0.19",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "save": "^2.9.0",
+    "styled-components": "^6.1.14",
     "three": "^0.166.1",
     "web-vitals": "^2.1.4"
   },
