Layout responsiveness improvement

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "three": "^0.166.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://simonaanchova.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -53,6 +54,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.3.0"
   }
 }
